--- a/station/otemachi.html
+++ b/station/otemachi.html
@@ -7,7 +7,7 @@
   <meta name="description" content="このサイトでは、発車メロディを再現することができます！">
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="icon" href="https://raw.githubusercontent.com/ssmn93/depart-melody/main/picture/e233yo.png" />
-  <link rel="stylesheet" href="chiyoda.css">
+  <link rel="stylesheet" href="marunouchi.css">
   <meta property="og:image" content="https://cdn.glitch.global/f6b8403f-df22-44d1-8c21-1151b6811bd0/tv_onsei.png?v=1743405036680">
   <meta property="og:description" content="このサイトでは、発車メロディを再現することができます！">
   <meta property="og:title" content="大手町駅｜どこでもステーションベル">
@@ -42,17 +42,17 @@
           <img src="https://static.wixstatic.com/media/0acb38_06423fdbe81d46ce9d11de8b7cbe67d6~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_06423fdbe81d46ce9d11de8b7cbe67d6~mv2.png" alt="大手町駅">
           <div class="platform">
             <h2>1番線 -丸ノ内線A線</h2>
-            <p>快適乗降 【未収録】</p>
+            <p>快適乗降</p>
           </div>
-<!--           <a href="../platform/otemachi_1.html"></a> -->
+          <a href="../platform/otemachi_1.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_06423fdbe81d46ce9d11de8b7cbe67d6~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_06423fdbe81d46ce9d11de8b7cbe67d6~mv2.png" alt="大手町駅">
           <div class="platform">
             <h2>2番線 -丸ノ内線B線</h2>
-            <p>潤い電車 【未収録】</p>
+            <p>潤い電車</p>
           </div>
-<!--           <a href="../platform/otemachi_2.html"></a> -->
+          <a href="../platform/otemachi_2.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_4b090fcaf5e040d3897d0af83e5b8366~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_4b090fcaf5e040d3897d0af83e5b8366~mv2.png" alt="大手町駅">
