--- a/station/akigawa.html
+++ b/station/akigawa.html
@@ -42,7 +42,7 @@
           <img src="https://static.wixstatic.com/media/0acb38_c61bf8cc65494b9e878fb9214da4f925~mv2.png/v1/fill/w_259,h_311,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_c61bf8cc65494b9e878fb9214da4f925~mv2.png" alt="秋川駅">
           <div class="platform">
             <h2>1番線 -五日市線下り</h2>
-            <p>朝の静けさ</p>
+            <p>曲名不明(首都圏41番) 〈変更前〉</p>
           </div>
           <a href="../platform/akigawa_1.html"></a>
         </div>
@@ -50,7 +50,7 @@
           <img src="https://static.wixstatic.com/media/0acb38_c61bf8cc65494b9e878fb9214da4f925~mv2.png/v1/fill/w_259,h_311,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_c61bf8cc65494b9e878fb9214da4f925~mv2.png" alt="秋川駅">
           <div class="platform">
             <h2>2番線 -五日市線上り</h2>
-            <p>Farewell</p>
+            <p>曲名不明(首都圏41-1番) 〈変更前〉</p>
           </div>
           <a href="../platform/akigawa_2.html"></a>
         </div>
