--- a/platform/ota_1_d.html
+++ b/platform/ota_1_d.html
@@ -4,12 +4,12 @@
   <meta charset="utf-8" />
   <meta name="robots" content="index, follow">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="太田駅1番線下りの発車メロディ「春よ、来い」の再現ができます！">
+  <meta name="description" content="太田駅1番線下りの信号開通メロディ「春よ、来い」の再現ができます！">
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="icon" href="https://raw.githubusercontent.com/ssmn93/depart-melody/main/picture/e233yo.png" />
   <link rel="stylesheet" href="tobu_isesaki.css">
   <meta property="og:image" content="https://cdn.glitch.global/f6b8403f-df22-44d1-8c21-1151b6811bd0/tv_onsei.png?v=1743405036680">
-  <meta property="og:description" content="太田駅1番線下りの発車メロディ「春よ、来い」の再現ができます！">
+  <meta property="og:description" content="太田駅1番線下りの信号開通メロディ「春よ、来い」の再現ができます！">
   <meta property="og:title" content="太田駅1番線下り「春よ、来い」｜どこでもステーションベル">
   <meta property="og:url" content="https://ssmn93.github.io/depart-melody">
   <meta name="twitter:card" content="summary_large_image">
