--- a/line/tobu_koizumi.html
+++ b/line/tobu_koizumi.html
@@ -70,8 +70,8 @@
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_7b22db5a24364adda55e2c55c9875187~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_7b22db5a24364adda55e2c55c9875187~mv2.png" alt="太田駅">
-          <p>太田駅 【未収録】</p>
-          <!-- <a href="../station/ota.html"></a> -->
+          <p>太田駅</p>
+          <a href="../station/ota.html"></a>
         </div>
       </div>
   </div>
